--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,15 @@
     "name": "Hide X Trends",
     "version": "1.0",
     "description": "A Chrome extension that hides trends and recommended users on X (formerly Twitter)",
-    "permissions": [
-        "activeTab"
+    "host_permissions": [
+        "*://x.com/*",
+        "*://*.x.com/*"
     ],
     "icons": {
-        "16": "icon16.png",
-        "32": "icon32.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "icon/icon16.png",
+        "32": "icon/icon32.png",
+        "48": "icon/icon48.png",
+        "128": "icon/icon128.png"
     },
     "content_scripts": [
         {
