--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
-    "name": "Hide X Trends",
+    "name": "__MSG_extensionName__",
     "version": "1.0",
-    "description": "A Chrome extension that hides trends and recommended users on X (formerly Twitter)",
+    "description": "__MSG_extensionDescription__",
+    "default_locale": "en",
     "host_permissions": [
         "*://x.com/*",
         "*://*.x.com/*"
